--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/csscomun.css">
+        <link rel="stylesheet" href="css/responsive.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -29,12 +31,12 @@
 
 
         <div id="wrapper">
-            <section>
+            <section id="primary">
               <h3> General Information </h3>
               <p> I'm not currently looking for new design work. If you have any questions, please do not heasitate to contact me.</p>
               <p> You can also contact me on Twitter :)</p>
             </section>
-            <section>
+            <section id="secondary">
               <h3> Contact Details </h3>
               <ul class="contact-info">
                 <li class="phone"><a href="tel:627762459">627762459</a></li>
