--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Jaime Mateo | Developer</title>
-    		<meta name="description" content="Jaime Mateo's Portfolio">
+        <meta name="description" content="Jaime Mateo's Portfolio">
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/csscomun.css">
@@ -16,33 +16,32 @@
     <body>
         <header>
                 <a href="index.html" id="logo">
-                  <h1>Jaime Mateo</h1>
-                  <h2>Developer</h2>
+                  <h1>Antonio Campuzano</h1>
+                  <h2>Escultor</h2>
                 </a>
             <nav>
-      				<ul>
-      					<li><a href="index.html" target="_parent">Portfolio</a></li>
-      					<li><a href="about.html" target="_parent" class="selected">About</a></li>
-      					<li><a href="contact.html" target="_parent">Contact</a></li>
-      				</ul>
+              <ul>
+                <li><a href="index.html" target="_parent">Obra</a></li>
+                <li><a href="about.html" target="_parent" class="selected">Sobre mí</a></li>
+                <li><a href="contact.html" target="_parent">Contacto</a></li>
+              </ul>
             </nav>
         </header>
 
 
         <div id="wrapper">
             <section>
-              <img src="img/CV.jpg" alt="Photograph of Jaime Mateo" class="profile-photo">
-              <h3>About</h3>
-              <p>Hi, I'm Jaime Mateo! This is my desing portfolio where I share all of my favourite work.
-              <p>If you'd like to follow me on Twitter, my username is <a href="https://twitter.com/JaimeMateo_" target="_blank"> @JaimeMateo_ </a>.</p>
+              <img src="img/antonio.jpg" alt="Photograph of Jaime Mateo" class="profile-photo">
+              <h3>Sobre mí</h3>
+              <p>Antonio Campuzano nace en Archena (Murcia) en 1986. <br><br>Ya desde su infancia muestra sus dotes para las artes y su espíritu creativo: pinta y modela en barro siempre que tiene la ocasión. Siente un gran interés por la escultura y admira a grandes escultores del siglo XX como González Moreno o José Capuz. A los 15 años se matricula en la academia de Dibujo y Pintura "Academia de las Artes" en la ciudad de Murcia. En ella intenta perfeccionar los conocimientos que hasta ahora ha adquirido de manera autodidacta, dibujando y modelando bajo la supervisión del profesor. <br><br> En 2003, tras terminar sus estudios obligatorios en el I.E.S. Dr. Pedro Guillén de Archena, decide con el apoyo de su familia marchar a Murcia y matricularse en el I.E.S. Floridablanca de dicha ciudad para realizar el bachillerato en la modalidad de arte. En ese año viaja por el norte de la península, descubriendo una visión más amplia de la escultura, admirando la obra contemporánea de Chillida entre otros. Esto le hace interesarse de manera especial por la belleza de la forma en la obra.<br><br>En 2008, consigue ser Monitor Sociocultural y esa titulación le ayuda a introducirse en el mundo de la enseñanza, dedicándose a impartir talleres de arte, donde enseñará a sus componentes técnicas pictóricas, cerámica y modelado, transmitiendo así su pasión por el arte.<br><br>En 2012, se matricula en la Escuela de Arte de Murcia donde adquirirá conocimientos de talla en madera y forja artística, y logrará conseguir el titulo de "Técnico superior en artes plásticas y diseño de la Escultura" en 2014.<br><br>En 2015 es elegido para exponer en la muestra "Escaparates con Arte" que durante el mes de mayo llenó los escaparates de los establecimientos del barrio de Vistalegre con diferentes obras artísticas de antiguos alumnos de la Escuela de Arte. Campuzano participó con su obra "San Sergio y San Baco" la cual realizó como proyecto final de ciclo.<br><br>En marzo de 2016 presenta su primera exposición individual llamada "Ruah", donde Campuzano expone ocho obras que representan algunos de los temas universales del arte como la fecundidad o la muerte.<br></p>
             </section>
         </div>
 
         <footer>
-        		<a href="https://twitter.com/JaimeMateo_" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-        		<a href="http://linkd.in/1HNQbtZ" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
-            <p>&copy; 2015, Jaime Mateo</p>
-		    </footer>
+            <a href="https://twitter.com/Ajcampu86" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+            <a href="https://www.facebook.com/profile.php?id=100001572661329&fref=ts" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+            <p>&copy; 2016, Jaime Mateo</p>
+        </footer>
 
     </body>
 
