--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Jaime Mateo | Developer</title>
-    		<meta name="description" content="Jaime Mateo's Portfolio">
+        <title>Antonio Campuzano | Escultor</title>
+        <meta name="description" content="Jaime Mateo's Portfolio">
         <link rel="stylesheet" href="css/normalize.css">
         <link href='https://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400,400italic,700,700italic,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/csscomun.css">
@@ -17,15 +17,15 @@
     <body>
         <header>
                 <a href="index.html" id="logo">
-                  <h1>Jaime Mateo</h1>
-                  <h2>Developer</h2>
+                  <h1>Antonio Campuzano</h1>
+                  <h2>Escultor</h2>
                 </a>
             <nav>
-      				<ul>
-      					<li><a href="index.html" target="_parent">Portfolio</a></li>
-      					<li><a href="about.html" target="_parent">About</a></li>
-      					<li><a href="contact.html" target="_parent" class="selected">Contact</a></li>
-      				</ul>
+              <ul>
+                <li><a href="index.html" target="_parent">Obra</a></li>
+                <li><a href="about.html" target="_parent">Sobre mí</a></li>
+                <li><a href="contact.html" target="_parent" class="selected">Contacto</a></li>
+              </ul>
             </nav>
         </header>
 
@@ -47,10 +47,10 @@
         </div>
 
         <footer>
-        		<a href="https://twitter.com/JaimeMateo_" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-        		<a href="http://linkd.in/1HNQbtZ" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
+            <a href="https://twitter.com/JaimeMateo_" target="_blank"><img src="img/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+            <a href="http://linkd.in/1HNQbtZ" target="_blank"><img src="img/facebook.png" alt="Facebook Logo" class="social-icon"></a>
             <p>&copy; 2015, Jaime Mateo</p>
-		    </footer>
+        </footer>
 
     </body>
 
